# MTAL

./: Makefile  README.md  pyproject.toml  rsi_detector.ipynb  stock_list.csv
data/: btc.csv
notebooks/: backtest.ipynb  backtest_2.ipynb  backtest_portfolio.ipynb  froment.ipynb  rsi_btc.ipynb  rsi_detector.ipynb  tests.ipynb
src/mtal/: __init__.py  analysis.py  data_collect.py  dataviz.py  trainer.py  utils.py
src/mtal/backtesting/: bands.py  common.py  ema_cross_backtest.py  heikin_ashin.py  hma_on_rsi.py  ma_atr.py  ma_cross_backtest.py  obv.py  renko.py  three_ma.py  vzo_rsi.py  walk_forward.py
src/mtal/backtesting/portfolio/: rebalance.py  vaa.py
src/mtal/froment/: tasse_hanse.py
src/rsi_detector/: __init__.py  analysis.py  data_collect.py  dataviz.py
tests/: test_backtesting.py  test_backtesting_portfolio.py  test_compute.py  test_get_best_valid_line.py  test_tasse_hanse.py  test_trainer.py  test_walk_forward.py
tests/data/: aaveusdt_data.parquet  dogeusdt_data.parquet  solusdt_data.parquet  solusdt_volume_data.parquet  trxusdt_data.parquet  wifusdt_data.parquet
