[project]
name = "rsi_detector"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "romathonat", email = "romain.mathonat@gmail.com"},
]
dependencies = [
    "pandas>=2.2.1",
    "ipykernel>=6.29.4",
    "binance-connector>=3.6.0",
    "matplotlib>=3.8.3",
    "requests>=2.31.0",
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
